tests/paczka2/big_fuzzy/26487140.err
Error in line 8: hHF0cBTrF A592 256,4
Error in line 15: hHF0cBTrF S712 27,0
Error in line 25: hHF0cBTrF S172 73,7
Error in line 23: TJ55n7ZC S712 57,3
Error in line 27: TJ55n7ZC A638 11,3
Error in line 26: hHF0cBTrF S712 42,7
Error in line 35: A592 S712 2,85
Error in line 49: axAPb7ivJlV S172 192,7
Error in line 50: axAPb7ivJlV A638 96,0
Error in line 58: TApgj S712 526,6
Error in line 62: TApgj A592 75,2
Error in line 64: TJ55n7ZC A592 91,5
Error in line 70: TJ55n7ZC S172 15,9
Error in line 75: V1g S172 97,3
Error in line 60: axAPb7ivJlV A592 52,7
Error in line 73: TJ55n7ZC S712 68,4
Error in line 77: V1g A592 7,8
Error in line 65: hHF0cBTrF A592 187,1
Error in line 100: TJ55n7ZC A638 82,2
Error in line 96: TApgj S172 88,3
Error in line 102: axAPb7ivJlV S712 34,8
Error in line 113: V1g S172 10,5
Error in line 97: A592 A638 442,4
Error in line 127: V1g A638 70,1
Error in line 115: TApgj S712 66,0
Error in line 128: A592 S712 3,0
Error in line 131: A592 A638 51,2
Error in line 125: TJ55n7ZC A638 44,7
Error in line 135: axAPb7ivJlV S172 8,1
Error in line 140: hHF0cBTrF A638 182,5
Error in line 129: V1g A592 68,9
Error in line 137: TJ55n7ZC A592 42,2
Error in line 151: V1g A638 80,4
Error in line 163: A592 A638 89,3
Error in line 183: lPMjT S712 -2,3
Error in line 181: TJ55n7ZC S172 9,8
Error in line 206: V1g A638 p1,8
Error in line 202: V1g A592 65,4
Error in line 210: V1g S712 57,9
Error in line 190: lPMjT A638 65,8
Error in line 185: TJ55n7ZC S712 56,7
Error in line 217: lPMjT A592 53,4
Error in line 235: axAPb7ivJlV S712 130,4
Error in line 237: V1g S172 18,8
Error in line 241: TJ55n7ZC S712 32,0
